--- a/Ap204_Pronia/Areas/ProniaAdmin/Views/Slider/Index.cshtml
+++ b/Ap204_Pronia/Areas/ProniaAdmin/Views/Slider/Index.cshtml
@@ -52,10 +52,10 @@
                     <td>
                         <div class="d-flex">
                             <div class="detail">
-                                <a asp-controller="Slider" asp-action="Detail" asp-route-id="@slider.Id" class="btn btn-primary"><i class="mdi mdi-details"></i></a>
+                                <a asp-controller="Slider" asp-action="Detail" asp-route-id="@slider.Id" class="btn btn-danger"><i class="mdi mdi-details"></i></a>
                             </div>
                             <div class="edit">
-                                <a asp-controller="Slider" asp-action="Edit" asp-route-id="@slider.Id" class="btn btn-warning">
+                                <a asp-controller="Slider" asp-action="Edit" asp-route-id="@slider.Id" class="btn btn-danger">
                                     <i class="mdi mdi-tooltip-edit"></i>
                                 </a>
                             </div>
